# umalog

./: .gitignore  Cargo.toml  README.md  build
src/: main.rs  main_bak.rs  main_bak2.rs  ocr.rs  screenshot.rs
